[#28] 이미지 여러개 업로드 가능

--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -18,6 +18,8 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script type="text/javascript"
             src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <!-- Axios -->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <!-- 레이아웃 CSS -->
     <link rel="stylesheet" href="/css/layout.css">
     <!-- 개별 CSS -->
@@ -40,5 +42,6 @@
             crossorigin="anonymous"></script>
     <!-- 각 페이지의 자바스크립트가 들어오는 공간이고 이름은 "script"-->
     <th:block layout:fragment="script"></th:block>
+    <th:block layout:fragment="uploadScript"></th:block>
 </body>
 </html>
