--- a/src/main/resources/templates/admin/itemCreateForm.html
+++ b/src/main/resources/templates/admin/itemCreateForm.html
@@ -6,7 +6,8 @@
 <main class="container-fluid" layout:fragment="content">
     <div class="container mt-5">
         <h1 class="mb-4">상품 등록</h1>
-        <form th:action="@{/admin/item/create.do}" th:object="${itemFormDto}" method="POST" enctype="multipart/form-data">
+        <form th:action="@{/admin/item/create.do}" th:object="${itemFormDto}" method="POST"
+              enctype="multipart/form-data" id="itemForm">
 
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
 
@@ -35,7 +36,8 @@
 
             <div class="form-group">
                 <label for="price" class="mb-1">가격:</label>
-                <input type="number" class="form-control mb-2" id="price" th:field="*{price}" step="1000" required>
+                <input type="number" class="form-control mb-2" id="price" th:field="*{price}"
+                       step="1000" required>
             </div>
 
             <div class="form-group">
@@ -99,18 +101,48 @@
                 <div id="addedOptionsContainer"></div>
             </div>
 
-            <div class="form-group">
-                <label for="itemImages" class="mb-1 form-label">상품 이미지 업로드:</label>
-                <input type="file" class="form-control form-control-file mb-3" id="itemImages" name="itemImgFiles" multiple accept="image/*">
-                <ol class="list-group" id="imageFileList">
-                </ol>
+            <!-- 이미지 업로드 모달창을 여는 버튼-->
+            <div class="input-group mb-3">
+                <span class="input-group-text">Images</span>
+                <div class="float-end uploadHidden">
+                    <button type="button" class="btn btn-primary uploadFileBtn">이미지 추가</button>
+                </div>
             </div>
 
+            <!-- 첨부 파일 섬네일을 보여줄 부분 -->
+            <div class="row mt-3">
+                <div class="col ">
+                    <div class="container-fluid d-flex uploadResult" style="flex-wrap: wrap;">
+                    </div>
+                </div>
+            </div>
+
+            <!-- 첨부파일 추가를 위한 모달창 -->
+            <div class="modal uploadModal" tabindex="-1">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">이미지 업로드</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <div class="input-group mb-3">
+                                <input type="file" name="files" class="form-control" multiple >
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-primary uploadBtn">이미지 업로드</button>
+                            <button type="button" class="btn btn-outline-dark closeUploadBtn" >취소</button>
+                        </div>
+                    </div>
+                </div>
+            </div><!-- register modal -->
+
             <div class="form-group text-center mb-5 mt-5">
-                <button type="submit" class="btn btn-dark btn-lg">상품 등록</button>
+                <button type="button" class="btn btn-dark btn-lg" id="submitBtn">상품 등록</button>
             </div>
         </form>
     </div>
 </main>
-
 <script layout:fragment="script" th:src="@{/js/itemCreate.js}"></script>
+<script layout:fragment="uploadScript" th:src="@{/js/upload.js}"></script>
