--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -6,7 +6,7 @@
             <div class="row">
                 <div class="col-md-12 mt-5 text-center">
                     <p class="text-white">
-                        &copy; Copyright <script>document.write(new Date().getFullYear());</script> By <b>SPORTSFIT</b>. All rights reserved
+                        &copy; Copyright <script>2024</script> By <b>SPORTSFIT</b>. All rights reserved
                     </p>
                 </div>
             </div>
