--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,7 +14,7 @@
         <h2>New Arrivals</h2>
         <div class="row">
             <div class="col-md-3 d-flex align-items-stretch" th:each="item : ${newItemList}">
-                <a class="card" th:href="@{item/detail/{itemId}(itemId=${item.itemId})}">
+                <a class="card text-decoration-none text-reset" th:href="@{item/detail/{itemId}(itemId=${item.itemId})}">
                     <img th:src="@{'/files/' + ${item.repImgFileName}}" class="card-img-top" th:alt="${item.itemName}">
                     <div class="card-body">
                         <h5 class="card-title" th:text="${item.itemName}"></h5>
@@ -29,7 +29,7 @@
         <h2>Best Items</h2>
         <div class="row">
             <div class="col-md-3 d-flex align-items-stretch" th:each="item : ${bestItemList}">
-                <a class="card" th:href="@{item/detail/{itemId}(itemId=${item.itemId})}">
+                <a class="card text-decoration-none text-reset" th:href="@{item/detail/{itemId}(itemId=${item.itemId})}" >
                     <img th:src="@{'/files/' + ${item.repImgFileName}}" class="card-img-top" th:alt="${item.itemName}">
                     <div class="card-body">
                         <h5 class="card-title" th:text="${item.itemName}"></h5>
@@ -44,7 +44,7 @@
         <h2>Other Items</h2>
         <div class="row">
             <div class="col-md-3 d-flex align-items-stretch" th:each="item : ${allItemList}">
-                <a class="card" th:href="@{item/detail/{itemId}(itemId=${item.itemId})}">
+                <a class="card text-decoration-none text-reset" th:href="@{item/detail/{itemId}(itemId=${item.itemId})}">
                     <img th:src="@{'/files/' + ${item.repImgFileName}}" class="card-img-top" th:alt="${item.itemName}">
                     <div class="card-body">
                         <h5 class="card-title" th:text="${item.itemName}"></h5>
