[#31] 장바구니 상품 추가

--- a/src/main/resources/templates/item/itemDetail.html
+++ b/src/main/resources/templates/item/itemDetail.html
@@ -12,6 +12,9 @@
             </div>
         </div>
         <div class="col-md-6">
+
+            <input type="hidden" id="itemId" th:value="${itemFormDto.itemId}" readonly>
+
             <h2  class="fw-bold" th:text="${itemFormDto.itemName}">상품명</h2>
             <p class="lead fw-bold text-muted" th:text="${itemFormDto.itemDetail}">상품 상세 설명</p>
             <p>
