--- a/src/main/resources/templates/item/itemDetail.html
+++ b/src/main/resources/templates/item/itemDetail.html
@@ -3,7 +3,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout/layout}">
 
-<main class="container container-fluid my-5" layout:fragment="content">
+<div class="container container-fluid my-5" layout:fragment="content">
     <div class="row">
         <div class="col-md-6">
             <!-- 첫 번째 이미지만 표시 -->
@@ -99,7 +99,7 @@
             </div>
         </div>
     </div>
-</main>
+</div>
 
 <script layout:fragment="script" th:src="@{/js/itemDetail.js}"></script>
 
