--- a/src/main/resources/static/css/layout.css
+++ b/src/main/resources/static/css/layout.css
@@ -1,3 +1,12 @@
+html, body {
+    height: 100%;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+}
+
 .nav-item.dropdown:hover .dropdown-menu {
             display: block;
         }
@@ -15,4 +24,12 @@
 
 .dropdown-toggle::after {
   display: none !important;
+}
+
+main {
+    flex: 1 0 auto;
+}
+
+.footer {
+    flex-shrink: 0;
 }
