--- a/src/main/resources/templates/cart/cartDetail.html
+++ b/src/main/resources/templates/cart/cartDetail.html
@@ -3,14 +3,14 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout/layout}">
 
-<main class="container-fluid" layout:fragment="content">
+<div class="container-fluid container my-5" layout:fragment="content">
     <h2 class="mb-4">장바구니</h2>
 
     <div th:if="${errorMessage}" class="alert alert-danger" role="alert">
         <p th:text="${errorMessage}"></p>
     </div>
 
-    <div th:if="${cartVo != null and !cartVo.cartItems.empty}">
+    <div th:if="${cartItemDtos != null and !cartItemDtos.empty}">
         <table class="table">
             <thead>
             <tr>
@@ -23,36 +23,40 @@
             </tr>
             </thead>
             <tbody>
-            <tr th:each="cartItem : ${cartVo.cartItems}">
-                <td th:text="${cartItem.itemName}">상품명</td>
-                <td th:text="${item.optionName}">옵션명</td>
-                <td th:text="${#numbers.formatDecimal(item.price, 0, 'COMMA', 0, 'POINT')} + '원'">가격</td>
+            <tr th:each="cartItem : ${cartItemDtos}">
                 <td>
-                    <input type="number" th:value="${item.count}" min="1"
-                           th:data-item-id="${item.cartItemId}" class="form-control quantity-input">
+                    <img th:src="@{'/files/' + 's_' + ${cartItem.repImgFileName}}" alt="상품 이미지" style="width: 50px; height: 50px;">
+                    <span th:text="${cartItem.itemName}">상품명</span>
                 </td>
-                <td th:text="${#numbers.formatDecimal(item.price * item.count, 0, 'COMMA', 0, 'POINT')} + '원'">합계</td>
+                <td th:text="${cartItem.optionName + ' : ' + cartItem.optionValue}">옵션명</td>
+                <td>
+                    <span th:text="${#numbers.formatDecimal(cartItem.price, 0, 'COMMA', 0, 'POINT')} + '원'">가격</span>
+                    <span th:if="${cartItem.additionalPrice > 0}"
+                          th:text="'(+' + ${#numbers.formatDecimal(cartItem.additionalPrice, 0, 'COMMA', 0, 'POINT')} + '원)'">
+                    </span>
+                </td>
+                <td>
+                    <input type="number" th:value="${cartItem.count}" min="1"
+                           th:data-item-id="${cartItem.cartItemId}" class="form-control quantity-input">
+                </td>
+                <td th:text="${#numbers.formatDecimal(cartItem.totalPrice, 0, 'COMMA', 0, 'POINT')} + '원'">합계</td>
                 <td>
                     <button class="btn btn-danger btn-sm delete-item"
-                            th:data-item-id="${item.cartItemId}">삭제</button>
+                            th:data-item-id="${cartItem.cartItemId}">삭제</button>
                 </td>
             </tr>
             </tbody>
         </table>
 
         <div class="d-flex justify-content-between align-items-center mt-4">
-            <h4>총 합계: <span th:text="${#numbers.formatDecimal(cartVo.totalPrice, 0, 'COMMA', 0, 'POINT')} + '원'"></span></h4>
+            <h4>총 합계: <span th:text="${#numbers.formatDecimal(#aggregates.sum(cartItemDtos.![totalPrice]), 0, 'COMMA', 0, 'POINT')} + '원'"></span></h4>
             <button class="btn btn-primary" id="proceedToCheckout">주문하기</button>
         </div>
     </div>
 
-    <div th:if="${cartVo == null or cartVo.cartItems.empty}" class="alert alert-info">
+    <div th:if="${cartItemDtos == null or cartItemDtos.empty}" class="alert alert-info">
         장바구니가 비어있습니다.
     </div>
-
-    <div class="mt-3">
-        <a href="/" class="btn btn-secondary">쇼핑 계속하기</a>
-    </div>
-</main>
+</div>
 
 <script layout:fragment="script" th:src="@{/js/cartDetail.js}"></script>
