--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-    <footer class="footer bg-dark" th:fragment="footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 mt-5 text-center">
-                    <p class="text-white">
-                        &copy; Copyright <script>2024</script> By <b>SPORTSFIT</b>. All rights reserved
-                    </p>
-                </div>
+<footer class="footer mt-auto py-3 bg-dark" th:fragment="footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <p class="text-white mb-0">
+                    &copy; Copyright 2024 By <b>SPORTSFIT</b>. All rights reserved
+                </p>
             </div>
         </div>
-    </footer>
+    </div>
+</footer>
+
 </html>
