--- a/src/main/resources/templates/item/searchItemList.html
+++ b/src/main/resources/templates/item/searchItemList.html
@@ -3,7 +3,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout/layout}">
 
-<main class="container-fluid" layout:fragment="content">
+<div class="container-fluid" layout:fragment="content">
     <div class="row justify-content-center">
         <div class="col-md-10 text-center">
 
@@ -49,6 +49,6 @@
 
         </div>
     </div>
-</main>
+</div>
 
 </html>
