--- a/src/main/resources/templates/member/join.html
+++ b/src/main/resources/templates/member/join.html
@@ -3,7 +3,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout/layout}">
 
-<main class="container-fluid" layout:fragment="content">
+<div class="container-fluid" layout:fragment="content">
 
     <div class="row justify-content-center mt-5 mb-5">
         <div class="col-md-6 col-lg-4 form-container">
@@ -80,7 +80,8 @@
 
         </div>
     </div>
-</main>
+</div>
 
 <script layout:fragment="script" th:src="@{/js/join.js}"></script>
+
 </html>
