--- a/src/main/resources/templates/member/loginForm.html
+++ b/src/main/resources/templates/member/loginForm.html
@@ -3,7 +3,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout/layout}">
 
-<main class="container-fluid" layout:fragment="content">
+<div class="container-fluid" layout:fragment="content">
 
     <div class="row justify-content-center mt-5 mb-5">
         <div class="col-md-6 col-lg-4 form-container">
@@ -43,11 +43,8 @@
             <a th:href="@{/member/join.do}" class="btn btn-outline-secondary col-12">회원가입 하러가기</a>
         </div>
     </div>
-
-
-</main>
+</div>
 
 <script layout:fragment="script" th:src="@{/js/login.js}"></script>
-
 
 </html>
